# team-_jeevant-_pps_p1

./: app.js  docker-compose.yml  index.html  jeevant-ai-slides.md  style.css
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/routes/: encounters.py  immunizations.py  migrants.py  surveillance.py
frontend/: index.html  package.json  tsconfig.json
frontend/public/: manifest.webmanifest
frontend/src/: i18n.ts  main.tsx
frontend/src/modules/: App.tsx  RegistrationForm.tsx
